--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title> Graded Assignment 4</title>
+      <link rel="stylesheet" type="text/css" href="styles.css" />
+      <style>
+  
+      </style>
    </head>
+    <!-- Header -->
+ <!-- <header class="w3-container w3-center w3-padding-32">  -->
+   <article>
+      <header>
+       <h1 class="center"><b>MY SOLO TRIP TO JAMAICA</b></h1>
+       <!-- <h2 class="center"><b>Welcome to the blog of <span class="w3-tag">Esra</span></b></h2> -->
+      </header>
+   </article>
+<article>
+   <header>
+      <div class="flag jamaica">
+         <div class="jamaica__left_triangle"></div>
+         <div class="jamaica__right_triangle"></div>
+       </div>
+   </header>
+</article>
+
    <body>
       <!-- Write your HTML in this file! -->
+      <p class="center">In 2019, I decided to take a solo trip to Jamaica. I used <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
+         target="_blank">Couchsurfing</a></b> when I was traveling in Spain and I wanted to use it in Jamaica for a week. 
+          I was lucky that I found an amazing host who helped me a lot. They took care of my documents such of my 
+          passport and some money, they gave me their backpack to take a bus to visit another city for few days because
+          it is not safe to carry important stuff. When I was outside walking, bunch of people was walking with me, 
+          asking me questions and staring at me. To be honest I was a bit scared. But I can clearly say that Jamaican 
+          people love helping.  I made it safe and enjoyed a lot, made some friends that I still talk. I never forget my 
+          Jamaica trip and looking forward to visit my friends over there.</p>
    </body>
+
+   <footer>
+      <p> Esra Coşkun Brown </p>
+      <p><a href="mailto:hege@example.com">essrcskn@hotmail.com</a></p>
+    </footer>
+   
+
+
+
+
+
+
+
 </html>
