--- a/index.html
+++ b/index.html
@@ -28,15 +28,21 @@
 
    <body>
       <!-- Write your HTML in this file! -->
-      <p class="center">In 2019, I decided to take a solo trip to Jamaica. I used <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
-         target="_blank">Couchsurfing</a></b> when I was traveling in Spain and I wanted to use it in Jamaica for a week. 
-          I was lucky that I found an amazing host who helped me a lot. They took care of my documents such of my 
-          passport and some money, they gave me their backpack to take a bus to visit another city for few days because
-          it is not safe to carry important stuff. When I was outside walking, bunch of people was walking with me, 
-          asking me questions and staring at me. To be honest I was a bit scared. But I can clearly say that Jamaican 
-          people love helping.  I made it safe and enjoyed a lot, made some friends that I still talk. I never forget my 
-          Jamaica trip and looking forward to visit my friends over there.</p>
+      <p class="center">In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
+         target="_blank">Couchsurfing</a></b> for a week. I was lucky that I found an amazing host who helped me a lot in Kingston.
+         Then I took a bus to visit to beautiful city Ocho Rios. It is 2 hours from Kingston.</p>  
    </body>
+   <div class="row">
+      <div class="column">
+        <img src="images/ochorios1.jpeg" alt="ocho rios jamaica" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/jamaicafriends.jpeg" alt="ocho rios friends" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/ochorios3.jpg" alt="ocho rios" style="width:100%">
+      </div>
+    </div>
 
    <footer>
       <p> Esra Coşkun Brown </p>
