--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
       <title> Graded Assignment 4</title>
       <link rel="stylesheet" type="text/css" href="styles.css" />
       <style>
-  
+           body{
+            margin: 8px;
+           }
       </style>
    </head>
+
     <!-- Header -->
  <!-- <header class="w3-container w3-center w3-padding-32">  -->
    <article>
       <header>
-       <h1 class="center"><b>MY SOLO TRIP TO JAMAICA</b></h1>
+       <h1 id="mainHeading" class="center" ><b>MY SOLO TRIP TO JAMAICA</b></h1>
        <!-- <h2 class="center"><b>Welcome to the blog of <span class="w3-tag">Esra</span></b></h2> -->
       </header>
    </article>
@@ -28,10 +31,11 @@
 
    <body>
       <!-- Write your HTML in this file! -->
-      <p class="center">In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
+      <p class="center"> <i>In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
          target="_blank">Couchsurfing</a></b> for a week. I was lucky that I found an amazing host who helped me a lot in Kingston.
-         Then I took a bus to visit to beautiful city Ocho Rios. It is 2 hours from Kingston.</p>  
+         Then I took a bus to visit to beautiful city Ocho Rios. It is 2 hours from Kingston.</i></p>  
    </body>
+
    <div class="row">
       <div class="column">
         <img src="images/ochorios1.jpeg" alt="ocho rios jamaica" style="width:100%">
@@ -43,6 +47,17 @@
         <img src="images/ochorios3.jpg" alt="ocho rios" style="width:100%">
       </div>
     </div>
+
+   <body> <p class="center"> <i>Jamaica is land of wood and water, waterfalls, rivers, mountains and more. 
+      I explored all that the Ocho Rios region had to offer, each time more and more spiritually connected to a 
+      place I had never visited before. Ocho Rios is Spanish name, which translates to “Eight Rivers.”</i></p> 
+
+   <div>
+      <img src="images/jamaicanhost.jpeg" alt="Jamaican people" style="float:left; width:35% ;" >
+
+   </div>
+
+  </body>
 
    <footer>
       <p> Esra Coşkun Brown </p>
