--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 
    <div>
       <img src="images/jamaicanhost.jpeg" alt="Jamaican people" style="float:left; width:35% ;" >
-
+      <p text-align="right" class="text"> <i>My local host, helped me a lot during my trip. They took care of my stuff when I visit Ocho
+         Rios for few days. They showed me places to exchange my money, to eat best ice-cream in Jamaica, to take a bus to visit 
+         Bob Marley's museum. I did not have internet during my trip. So they made my trip safe and enjoyable.</i></p>
    </div>
-
-  </body>
+ 
+</body>
+  
 
    <footer>
       <p> Esra Coşkun Brown </p>
