--- a/index.html
+++ b/index.html
@@ -4,39 +4,44 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <title> Graded Assignment 4</title>
-      <link rel="stylesheet" type="text/css" href="styles.css" />
+      <link rel="stylesheet" type="text/css" href="styles.css" >
       <style>
-           body{
-            margin: 8px;
-           }
-      </style>
+         body{
+          margin: 8px;
+         }
+    </style>
+      <style>
+         body {
+           background-image:url("images/backgroundpic.jpg")
+         }
+         </style>
    </head>
 
     <!-- Header -->
- <!-- <header class="w3-container w3-center w3-padding-32">  -->
-   <article>
+  <body>
       <header>
        <h1 id="mainHeading" class="center" ><b>MY SOLO TRIP TO JAMAICA</b></h1>
-       <!-- <h2 class="center"><b>Welcome to the blog of <span class="w3-tag">Esra</span></b></h2> -->
       </header>
-   </article>
-<article>
-   <header>
+  
+  </body>
+  <body>
+   <header style="margin-top:1cm ;" >
       <div class="flag jamaica">
          <div class="jamaica__left_triangle"></div>
          <div class="jamaica__right_triangle"></div>
        </div>
    </header>
-</article>
-
+</body>
+<main>
    <body>
       <!-- Write your HTML in this file! -->
-      <p class="center"> <i>In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
+      <p style="margin-top:2cm ;" class="center"> <i>In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
          target="_blank">Couchsurfing</a></b> for a week. I was lucky that I found an amazing host who helped me a lot in Kingston.
          Then I took a bus to visit to beautiful city Ocho Rios. It is 2 hours from Kingston.</i></p>  
    </body>
-
-   <div class="row">
+</main>  
+  <article>
+   <div style="margin-top:1cm ;"  class="row">
       <div class="column">
         <img src="images/ochorios1.jpeg" alt="ocho rios jamaica" style="width:100%">
       </div>
@@ -47,31 +52,42 @@
         <img src="images/ochorios3.jpg" alt="ocho rios" style="width:100%">
       </div>
     </div>
-
-   <body> <p class="center"> <i>Jamaica is land of wood and water, waterfalls, rivers, mountains and more. 
+</article>
+   <body> <p style="margin-top:1cm ;" class="center"> <i>Jamaica is land of wood and water, waterfalls, rivers, mountains and more. 
       I explored all that the Ocho Rios region had to offer, each time more and more spiritually connected to a 
       place I had never visited before. Ocho Rios is Spanish name, which translates to “Eight Rivers.”</i></p> 
 
    <div>
       <img src="images/jamaicanhost.jpeg" alt="Jamaican people" style="float:left; width:35% ;" >
-      <p text-align="right" class="text"> <i>My local host, helped me a lot during my trip. They took care of my stuff when I visit Ocho
+      <p text-align="right" class="text"> <i>The local people I met through CouchSurfing helped me a lot during my trip. They took care of my stuff when I visit Ocho
          Rios for few days. They showed me places to exchange my money, to eat best ice-cream in Jamaica, to take a bus to visit 
          Bob Marley's museum. I did not have internet during my trip. So they made my trip safe and enjoyable.</i></p>
    </div>
- 
-</body>
-  
+ </body>
 
-   <footer>
-      <p> Esra Coşkun Brown </p>
-      <p><a href="mailto:hege@example.com">essrcskn@hotmail.com</a></p>
-    </footer>
+ <body>
+   <p style="margin-top:2cm ;"  ><i>Jamaican locals are very friendly. They are always ready to help to make your vacation unforgettable. They are
+      proud of their culture. I made some friends from there and we still talk. I never forget my Jamaica trip and 
+      looking forward to visit my friends over there. </i></p>
+
+   <div style="margin-top:1cm ;"  class="row">
+      <div class="column">
+        <img src="images/bobmarleyhouse.HEIC" alt="Bob Marley's house" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/ochorios.jpeg" alt="Ocho Rios Beach" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/jamaicatrip7.HEIC" alt="Jamaican friend" style="width:100%">
+      </div>
+    </div>
+    
+ </body> 
+
+   <footer style="margin-top:2cm ;" >
+      <p>&copy; 2022 Esra Brown</p>
+	</footer>
    
-
-
-
-
-
 
 
 </html>
