--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
    </head>
 
     <!-- Header -->
-  <body>
+  <article>
       <header>
        <h1 id="mainHeading" class="center" ><b>MY SOLO TRIP TO JAMAICA</b></h1>
       </header>
-  
-  </body>
-  <body>
+   </article>
+  <article>
    <header style="margin-top:1cm ;" >
       <div class="flag jamaica">
          <div class="jamaica__left_triangle"></div>
          <div class="jamaica__right_triangle"></div>
        </div>
    </header>
-</body>
+</article>
 <main>
-   <body>
+<body>
+   <article>
       <!-- Write your HTML in this file! -->
-      <p style="margin-top:2cm ;" class="center"> <i>In 2019, I decided to take a solo trip to Jamaica. I decided to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
+      <p style="margin-top:2cm ;" class="center"> <i>In 2019, I decided to take a solo trip to Jamaica. I wanted to use <b><a href="https://en.wikipedia.org/wiki/CouchSurfing" 
          target="_blank">Couchsurfing</a></b> for a week. I was lucky that I found an amazing host who helped me a lot in Kingston.
-         Then I took a bus to visit to beautiful city Ocho Rios. It is 2 hours from Kingston.</i></p>  
-   </body>
-</main>  
+         Then, I took a bus to visit the beautiful city Ocho Rios which is 2 hours from Kingston.</i></p>  
+      </article>
+
   <article>
    <div style="margin-top:1cm ;"  class="row">
       <div class="column">
@@ -52,23 +52,26 @@
         <img src="images/ochorios3.jpg" alt="ocho rios" style="width:100%">
       </div>
     </div>
+ </article>   
 </article>
-   <body> <p style="margin-top:1cm ;" class="center"> <i>Jamaica is land of wood and water, waterfalls, rivers, mountains and more. 
-      I explored all that the Ocho Rios region had to offer, each time more and more spiritually connected to a 
+    <p style="margin-top:1cm ;" class="center"> <i>Jamaica is the land of wood and water, waterfalls, rivers, mountains, and more. 
+      I explored all the ares that the Ocho Rios region had to offer. Each time I became more and more spiritually connected to a 
       place I had never visited before. Ocho Rios is Spanish name, which translates to “Eight Rivers.”</i></p> 
 
    <div>
-      <img src="images/jamaicanhost.jpeg" alt="Jamaican people" style="float:left; width:35% ;" >
-      <p text-align="right" class="text"> <i>The local people I met through CouchSurfing helped me a lot during my trip. They took care of my stuff when I visit Ocho
-         Rios for few days. They showed me places to exchange my money, to eat best ice-cream in Jamaica, to take a bus to visit 
-         Bob Marley's museum. I did not have internet during my trip. So they made my trip safe and enjoyable.</i></p>
+      <img src="images/jamaicanhost.jpeg" alt="Jamaican people" style="float:left; width:35% ; margin-top:1cm" >
+    </div>
+    <div> 
+      <p style="margin-top:5cm" ; text-align="right" class="text"> <i>The local people I met through CouchSurfing helped me a lot during my trip. They took care of my belongings when I visited Ocho
+         Rios for few days. They showed me places to exchange my money, where to eat the best ice-cream in Jamaica, and how to take a bus to visit 
+         Bob Marley's museum. I did not have internet during my trip, so having someone I could trust and rely on for information and direction helped make my trip safe and enjoyable.</i></p>
    </div>
- </body>
+</article>
 
- <body>
-   <p style="margin-top:2cm ;"  ><i>Jamaican locals are very friendly. They are always ready to help to make your vacation unforgettable. They are
-      proud of their culture. I made some friends from there and we still talk. I never forget my Jamaica trip and 
-      looking forward to visit my friends over there. </i></p>
+ <article>
+   <p style="margin-top:10cm ;"  ><i>Jamaican locals are a very friendly and proud of their culture. They are always ready to help to make your vacation unforgettable.
+      I made some friends from there and we still talk today. I will never forget my Jamaica trip and I am
+      looking forward to visting my friends over there again someday. </i></p>
 
    <div style="margin-top:1cm ;"  class="row">
       <div class="column">
@@ -81,13 +84,14 @@
         <img src="images/jamaicatrip7.HEIC" alt="Jamaican friend" style="width:100%">
       </div>
     </div>
-    
- </body> 
+  </article>
+</main>
 
    <footer style="margin-top:2cm ;" >
-      <p>&copy; 2022 Esra Brown</p>
+      <p id="testP" class="fun-Paragraph"> &copy; 2022 Esra Brown</p>
 	</footer>
-   
+
+  </body>  
 
 
 </html>
